--- a/graficasComputacionClase/graficasComputacionClase.vcxproj
+++ b/graficasComputacionClase/graficasComputacionClase.vcxproj
@@ -117,15 +117,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Circle.cpp" />
-    <ClCompile Include="..\..\Employee.cpp" />
-    <ClCompile Include="..\..\Main.cpp" />
-    <ClCompile Include="..\..\Rectangle.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Employee.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Circle.h" />
-    <ClInclude Include="..\..\Employee.h" />
-    <ClInclude Include="..\..\Rectangle.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Employee.h" />
+    <ClInclude Include="Rectangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
