--- a/graficasComputacionClase/graficasComputacionClase.vcxproj.filters
+++ b/graficasComputacionClase/graficasComputacionClase.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="mainExamen2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mainSombras.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h">
