--- a/graficasComputacionClase/graficasComputacionClase.vcxproj.filters
+++ b/graficasComputacionClase/graficasComputacionClase.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="mainSombras.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Texture2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h">
@@ -101,6 +104,9 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Texture2D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Prueba.txt" />
@@ -118,5 +124,22 @@
     <None Include="DiscardCenter.frag">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="defaultTexture.vert">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="defaultTexture.frag">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Downloads\cratetexture.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\..\Downloads\cerdito.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\..\Downloads\base.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
